# vkpark-cpp-homework

./: .gitignore  README.md
.github/workflows/: checks.yml
cpp_hw1/: .gitignore  CMakeLists.txt  test_command.txt  test_script.sh
cpp_hw1/headers/: arg_utils.hpp  errors.hpp  exercise.hpp  main.hpp  read_files.hpp  task.hpp  tv_serial.hpp
cpp_hw1/sources/: arg_utils.cpp  errors.cpp  exercise.cpp  main.cpp  read_files.cpp  task.cpp
cpp_hw2/: CMakeLists.txt  test_script.sh
cpp_hw2/.github/workflows/: checks.yml  ci.yaml
cpp_hw2/examples/: text.txt
cpp_hw2/headers/: Conveyor.hpp  arg_utils.hpp  conveyor_parser.hpp  task.hpp
cpp_hw2/headers/operations/: Cat.hpp  Cut.hpp  Echo.hpp  IOperation.hpp  cat.hpp  cut.hpp  echo.hpp  i_operation.hpp
cpp_hw2/sources/: Conveyor.cpp  arg_utils.cpp  conveyor_parser.cpp  main.cpp  task.cpp
cpp_hw2/sources/operations/: Cat.cpp  Cut.cpp  Echo.cpp  cat.cpp  cut.cpp  echo.cpp
